Initial commit for vscode

--- a/.gitignore
+++ b/.gitignore
@@ -1,39 +1,11 @@
-# Prerequisites
-*.d
+# visual studio project file
+.vscode/*
+!.vscode/settings.json
+!.vscode/launch.json
+!.vscode/extensions.json
 
-# Compiled Object files
-*.slo
-*.lo
-*.o
-
-# Precompiled Headers
-*.gch
-*.pch
-
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
-
-# Fortran module files
-*.mod
-*.smod
-
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
-
-# Executables
-*.exe
-*.out
-*.app
-
-# binaries
-.idea/
-cmake-build-*/
-out/
+# build output
 build/
-.vs/
-bin-*/
+
+# macOS
+.DS_Store
