--- a/assignments/assignment0/CMakeLists.txt
+++ b/assignments/assignment0/CMakeLists.txt
@@ -1,18 +1,16 @@
-file(
- GLOB_RECURSE ASSIGNMENT0_INC CONFIGURE_DEPENDS
- RELATIVE ${CMAKE_CURRENT_SOURCE_DIR}
- *.h *.hpp
-)
+file(GLOB_RECURSE ASSIGNMENT0_INC CONFIGURE_DEPENDS
+    RELATIVE ${CMAKE_CURRENT_SOURCE_DIR}
+    *.h *.hpp)
 
-file(
- GLOB_RECURSE ASSIGNMENT0_SRC CONFIGURE_DEPENDS
- RELATIVE ${CMAKE_CURRENT_SOURCE_DIR}
- *.c *.cpp
-)
+file(GLOB_RECURSE ASSIGNMENT0_SRC CONFIGURE_DEPENDS
+    RELATIVE ${CMAKE_CURRENT_SOURCE_DIR}
+    *.c *.cpp)
+
 #Copies this assignment0's asset folder to bin when it is built
-add_custom_target(copyAssetsA0 ALL COMMAND ${CMAKE_COMMAND} -E copy_directory
-${CMAKE_CURRENT_SOURCE_DIR}/assets/
-${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/assets/)
+add_custom_target(copyAssetsA0
+    ALL COMMAND ${CMAKE_COMMAND} -E copy_directory
+    ${CMAKE_CURRENT_SOURCE_DIR}/assets/
+    ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${CMAKE_BUILD_TYPE}/assets/)
 
 install(FILES ${ASSIGNMENT0_INC} DESTINATION include/assignment0)
 add_executable(assignment0 ${ASSIGNMENT0_SRC} ${ASSIGNMENT0_INC})
